# kfs

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  auto_mount.sh  auto_unmount.sh  build  build.sh  demo-test.cpp  kfs.c  kfs.h  kfs_access.c  kfs_access.h  kfs_functions.h  kfs_fuse_functions.h  kfs_getattr.c  kfs_getattr.h  kfs_mkdir.c  kfs_mkdir.h  kfs_mknod.c  kfs_mknod.h  kfs_open.c  kfs_open.h  kfs_read.c  kfs_read.h  kfs_readdir.c  kfs_readdir.h  kfs_release.c  kfs_release.h  kfs_rename.c  kfs_rename.h  kfs_rmdir.c  kfs_rmdir.h  kfs_truncate.c  kfs_truncate.h  kfs_unlink.c  kfs_unlink.h  kfs_write.c  kfs_write.h  (+4 more)
CMakeModule/: FindLog4cxx.cmake
cmake/: FindFuse.cmake  FindGlusterfsApi.cmake
docker/: Dockerfile  docker-compose.yaml
docker/cluster-centos/: Dockerfile  gluster-disc-setup.service  gluster-disc-setup.sh
docker/draft/: Dockerfile
docker/shared_mount/: Dockerfile
kfs/: CMakeLists.txt  kfs.cpp  kfs.h  mountpoint.cpp  mountpoint.h
rwfs/: CMakeLists.txt  main.cpp
scripts/: auto_mount.sh  auto_unmount.sh  build.sh  docker-entrypoint.sh  install_dependencies.sh  kfs.sh
src/: CMakeLists.txt  kfs.c  kfs.h
src/glusterfs_client/: CMakeLists.txt  xglfs_access.c  xglfs_chmod.c  xglfs_chown.c  xglfs_create.c  xglfs_destroy.c  xglfs_fgetattr.c  xglfs_fops.h  xglfs_fsync.c  xglfs_fuse_operations.c  xglfs_getattr.c  xglfs_init.c  xglfs_link.c  xglfs_mkdir.c  xglfs_mknod.c  xglfs_open.c  xglfs_opendir.c  xglfs_release.c  xglfs_releasedir.c  xglfs_rename.c  xglfs_rmdir.c  xglfs_symlink.c  xglfs_unlink.c  xglfs_write.c
src/glusterfs_client/includes/: xglfs.h  xglfs_access.h  xglfs_chmod.h  xglfs_chown.h  xglfs_create.h  xglfs_destroy.h  xglfs_fgetattr.h  xglfs_fsync.h  xglfs_fuse_operations.h  xglfs_getattr.h  xglfs_init.h  xglfs_link.h  xglfs_mkdir.h  xglfs_mknod.h  xglfs_open.h  xglfs_opendir.h  xglfs_release.h  xglfs_releasedir.h  xglfs_rename.h  xglfs_rmdir.h  xglfs_symlink.h  xglfs_unlink.h  xglfs_write.h
src/glusterfs_lib/: CMakeLists.txt  xglfs_chmod.c  xglfs_chown.c  xglfs_create.c  xglfs_destroy.c  xglfs_fgetattr.c  xglfs_fsync.c  xglfs_ftruncate.c  xglfs_getattr.c  xglfs_init.c  xglfs_link.c  xglfs_mkdir.c  xglfs_mknod.c  xglfs_open.c  xglfs_opendir.c  xglfs_read.c  xglfs_readdir.c  xglfs_release.c  xglfs_rename.c  xglfs_rmdir.c  xglfs_statfs.c  xglfs_symlink.c  xglfs_truncate.c  xglfs_unlink.c  xglfs_utimens.c  xglfs_write.c
src/glusterfs_lib/includes/: xglfs.h  xglfs_chmod.h  xglfs_chown.h  xglfs_create.h  xglfs_destroy.h  xglfs_fsync.h  xglfs_ftruncate.h  xglfs_fuse_operations.h  xglfs_getattr.h  xglfs_link.h  xglfs_mknod.h  xglfs_read.h  xglfs_readdir.h  xglfs_releasedir.h  xglfs_rename.h  xglfs_statfs.h  xglfs_truncate.h  xglfs_unlink.h  xglfs_utimens.h  xglfs_write.h
src/kfs_lib/: CMakeLists.txt  copy_remote_storage_content.c  kfs_access.c  kfs_chmod.c  kfs_chown.c  kfs_common.c  kfs_create.c  kfs_destroy.c  kfs_fallocate.c  kfs_fgetattr.c  kfs_flush.c  kfs_fsync.c  kfs_ftruncate.c  kfs_getattr.c  kfs_init.c  kfs_link.c  kfs_mkdir.c  kfs_mknod.c  kfs_open.c  kfs_opendir.c  kfs_read.c  kfs_readdir.c  kfs_readlink.c  kfs_release.c  kfs_releasedir.c  kfs_rename.c  kfs_rmdir.c  kfs_statfs.c  kfs_symlink.c  kfs_truncate.c  kfs_unlink.c  kfs_utimens.c  kfs_write.c
src/kfs_lib/includes/: copy_remote_storage_content.h  kfs_access.h  kfs_common.h  kfs_create.h  kfs_fallocate.h  kfs_ftruncate.h  kfs_fuse_operations.h  kfs_getattr.h  kfs_init.h  kfs_link.h  kfs_mkdir.h  kfs_mknod.h  kfs_read.h  kfs_readdir.h  kfs_readlink.h  kfs_release.h  kfs_releasedir.h  kfs_rmdir.h  kfs_statfs.h  kfs_symlink.h  kfs_truncate.h  kfs_unlink.h  kfs_utimens.h  kfs_write.h
src/lib/: CMakeLists.txt  kfs_access.c  kfs_chmod.c  kfs_chown.c  kfs_common.c  kfs_create.c  kfs_destroy.c  kfs_fgetattr.c  kfs_flush.c  kfs_fsync.c  kfs_ftruncate.c  kfs_getattr.c  kfs_init.c  kfs_link.c  kfs_mkdir.c  kfs_mknod.c  kfs_open.c  kfs_opendir.c  kfs_read.c  kfs_readdir.c  kfs_readlink.c  kfs_release.c  kfs_releasedir.c  kfs_rename.c  kfs_rmdir.c  kfs_symlink.c  kfs_truncate.c  kfs_unlink.c  kfs_write.c
src/lib/includes/: kfs_access.h  kfs_chmod.h  kfs_chown.h  kfs_common.h  kfs_create.h  kfs_destroy.h  kfs_fgetattr.h  kfs_flush.h  kfs_fsync.h  kfs_ftruncate.h  kfs_fuse_operations.h  kfs_getattr.h  kfs_init.h  kfs_link.h  kfs_mkdir.h  kfs_mknod.h  kfs_open.h  kfs_opendir.h  kfs_read.h  kfs_readdir.h  kfs_readlink.h  kfs_release.h  kfs_releasedir.h  kfs_rename.h  kfs_rmdir.h  kfs_symlink.h  kfs_truncate.h  kfs_unlink.h  kfs_write.h
tests/: CMakeLists.txt  kfs_access_test.c  kfs_chmod_test.c  kfs_common_test.c  kfs_create_test.c  kfs_flush_test.c  kfs_fsync_test.c  kfs_ftruncate_test.c  kfs_link_test.c  kfs_mkdir_test.c  kfs_mknod_test.c  kfs_open_test.c  kfs_opendir_test.c  kfs_read_test.c  kfs_readdir_test.c  kfs_readlink_test.c  kfs_release_test.c  kfs_releasedir_test.c  kfs_rename_test.c  kfs_rmdir_test.c  kfs_suites.h  kfs_symlink_test.c  kfs_truncate.c  kfs_unlink_test.c  kfs_write_test.c  test_main.c  test_main.h
tests/assets/: zlog.conf
tests/kfs_test/: CMakeLists.txt  kfs_access_test.c  kfs_chmod_test.c  kfs_create_test.c  kfs_ftruncate_test.c  kfs_link_test.c  kfs_mkdir_test.c  kfs_opendir_test.c  kfs_read_test.c  kfs_readlink_test.c  kfs_releasedir_test.c  kfs_rename_test.c  kfs_rmdir_test.c  kfs_truncate.c  kfs_unlink_test.c  test_main.c
tests/kfs_test/includes/: test_main.h
tests/xglfs_test/: CMakeLists.txt  xglfs_mkdir_test.c  xglfs_test_main.c
tests/xglfs_test/includes/: xglfs_suites.h  xglfs_test_main.h
xglfs_test/: CMakeLists.txt  xglfs_mkdir_test.c
